--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "lib": ["ES2022"],
     "module": "ES2022",
     "moduleResolution": "Bundler",
+    "noEmit": true,
     "strict": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
