build(vercel): update configuration and dependency
- Update vercel.json to use builds instead of functions for API routes
- Change routing to redirect root to /api/telegram
- Bump vercel package from ^39.4.2 to ^50.9.5

BREAKING CHANGE: Root path now serves /api/telegram directly, potentially altering app behavior for users accessing the base URL.

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,19 @@
 {
   "version": 2,
-  "functions": {
-    "api/**/*.ts": {
-      "maxDuration": 30
+  "builds": [
+    {
+      "src": "api/telegram.ts",
+      "use": "@vercel/node"
     }
-  },
+  ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
+      "src": "/",
+      "dest": "/api/telegram"
+    },
+    {
+      "src": "/api/telegram",
+      "dest": "/api/telegram"
     }
   ]
 }
