--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "lib": ["ES2022"],
-    "module": "ES2022",
-    "moduleResolution": "Bundler",
-    "noEmit": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "types": ["node"]
-  },
-  "include": ["api/**/*.ts", "lib/**/*.ts", "scripts/**/*.ts"],
-  "exclude": ["node_modules"]
+    "target": "es2020",
+    "module": "commonjs",
+    "outDir": "./dist",
+    "strict": true
+  }
 }
-
