--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.13.0",
+    "@vercel/node": "^5.5.28",
     "dotenv": "^17.2.3",
     "tsx": "^4.21.0",
     "typescript": "^5.7.3",
