build(vercel): update dev server for Vercel compatibility and standardize imports
- Refactor devServer.mjs to simulate Vercel request/response objects for local testing
- Remove .js extensions from imports in lib files for consistency
- Add Node.js engine requirement and update dev script to build TypeScript first
- Update README.md and .env.example with improved deployment and configuration docs

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ GOOGLE_SERVICE_ACCOUNT_JSON={"type":"service_account",...}
 # Webhook URLs
 # Для локальной отладки - URL от ngrok (например: https://xxxx.ngrok-free.app)
 WEBHOOK_BASE_URL=https://xxxx.ngrok-free.app
-# Для продакшена - URL Vercel
+# Для скрипта webhook:prod (запускается локально). На самом Vercel VERCEL_URL задаётся автоматически.
 VERCEL_URL=https://your-project.vercel.app
 
 # Upstash Redis (опционально, для дедупликации)
