--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,3 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "api/telegram.ts",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "api/health.ts",
-      "use": "@vercel/node"
-    }
-  ],
-  "rewrites": [
-    { "source": "/api/telegram", "destination": "/api/telegram" },
-    { "source": "/api/health", "destination": "/api/health" }
-  ]
+  "version": 2
 }
