--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "tsc -p tsconfig.json && tsx scripts/devServer.mjs",
     "build": "tsc -p tsconfig.json",
+    "build:vercel": "node scripts/build-vercel-output.mjs",
     "webhook:local": "tsx scripts/setWebhook.mjs local",
     "webhook:prod": "tsx scripts/setWebhook.mjs prod",
     "webhook:delete": "tsx scripts/deleteWebhook.mjs",
@@ -19,6 +20,7 @@
     "@types/node": "^22.13.0",
     "@vercel/node": "^5.5.28",
     "dotenv": "^17.2.3",
+    "esbuild": "^0.27.2",
     "tsx": "^4.21.0",
     "typescript": "^5.7.3",
     "vercel": "^50.9.5"
