--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "worker-reports-bot",
   "private": true,
   "engines": {
-    "node": ">=18"
+    "node": "20.x"
   },
   "scripts": {
     "dev": "tsc -p tsconfig.json && tsx scripts/devServer.mjs",
