feat(api): enhance report collection and logging functionality
- Update the collectReports function to allow dynamic filtering of Google Drive sheets based on a configurable substring in their names.
- Implement detailed debug logging throughout the report collection process, including logging of API interactions and results.
- Modify the Telegram command handler to support a configurable number of days for report collection, improving flexibility for users.
- Update README to reflect new environment variables and their usage.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "worker-reports-bot",
   "private": true,
   "engines": {
-    "node": "20.x"
+    "node": ">=20"
   },
   "scripts": {
     "dev": "tsc -p tsconfig.json && tsx scripts/devServer.mjs",
