--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 BOT_TOKEN=your_bot_token_here
 ADMIN_IDS=123456789,987654321
 
-# Google Drive
+# Google Drive (папка должна быть доступна сервисному аккаунту с правом «Редактор» для команды /reports — создание сводного Doc)
 FOLDER_ID=your_folder_id_here
 GOOGLE_SERVICE_ACCOUNT_JSON={"type":"service_account",...}
 
