--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,11 @@ ADMIN_IDS=123456789,987654321
 FOLDER_ID=your_folder_id_here
 GOOGLE_SERVICE_ACCOUNT_JSON={"type":"service_account",...}
 
+# Вариант A: /reports через Google Apps Script (документ создаётся в вашем Диске, без квоты сервисного аккаунта)
+# Разверните code.js как Web App (doPost), укажите URL и секрет. В скрипте задайте Script Properties: FOLDER_ID, APPS_SCRIPT_SECRET.
+# GOOGLE_APPS_SCRIPT_WEB_APP_URL=https://script.google.com/macros/s/xxxx/exec
+# GOOGLE_APPS_SCRIPT_SECRET=your_secret_token
+
 # Webhook URLs
 # Для локальной отладки - URL от ngrok (например: https://xxxx.ngrok-free.app)
 WEBHOOK_BASE_URL=https://xxxx.ngrok-free.app
