Fix telegram webhook handling and align docs/env for Apps Script reports

--- a/.env.example
+++ b/.env.example
@@ -2,21 +2,27 @@
 BOT_TOKEN=your_bot_token_here
 ADMIN_IDS=123456789,987654321
 
-# Google Drive (папка должна быть доступна сервисному аккаунту с правом «Редактор» для команды /reports — создание сводного Doc)
-FOLDER_ID=your_folder_id_here
-GOOGLE_SERVICE_ACCOUNT_JSON={"type":"service_account",...}
+# Google Apps Script для /reports (обязательные для команды /reports)
+GOOGLE_APPS_SCRIPT_WEB_APP_URL=https://script.google.com/macros/s/xxxx/exec
+GOOGLE_APPS_SCRIPT_SECRET=your_secret_token
 
-# Вариант A: /reports через Google Apps Script (документ создаётся в вашем Диске, без квоты сервисного аккаунта)
-# Разверните code.js как Web App (doPost), укажите URL и секрет. В скрипте задайте Script Properties: FOLDER_ID, APPS_SCRIPT_SECRET.
-# GOOGLE_APPS_SCRIPT_WEB_APP_URL=https://script.google.com/macros/s/xxxx/exec
-# GOOGLE_APPS_SCRIPT_SECRET=your_secret_token
+# Google Drive API режим (опционально, нужен только для /today)
+# Если /today не используете, эти переменные не нужны.
+# FOLDER_ID=your_folder_id_here
+# GOOGLE_SERVICE_ACCOUNT_JSON={"type":"service_account",...}
+# REPORT_NAME_SUBSTRING=(Ответы)
 
-# Webhook URLs
-# Для локальной отладки - URL от ngrok (например: https://xxxx.ngrok-free.app)
-WEBHOOK_BASE_URL=https://xxxx.ngrok-free.app
-# Для скрипта webhook:prod (запускается локально). На самом Vercel VERCEL_URL задаётся автоматически.
-VERCEL_URL=https://your-project.vercel.app
+# Для code.gs в Script Properties:
+# APPS_SCRIPT_SECRET=<тот же секрет, что GOOGLE_APPS_SCRIPT_SECRET>
+# FOLDER_ID=<ID папки с отчетами>
 
-# Upstash Redis (опционально, для дедупликации)
+# Upstash Redis (опционально, дедупликация update_id)
 # UPSTASH_REDIS_REST_URL=
 # UPSTASH_REDIS_REST_TOKEN=
+
+# Webhook scripts (нужно только для локальных скриптов webhook:*):
+# Для локальной отладки - URL от ngrok (например: https://xxxx.ngrok-free.app)
+WEBHOOK_BASE_URL=https://xxxx.ngrok-free.app
+# Для скрипта webhook:prod (запускается локально).
+# На самом Vercel переменная VERCEL_URL обычно задаётся автоматически.
+VERCEL_URL=https://your-project.vercel.app
