--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "webhook:delete": "tsx scripts/deleteWebhook.mjs",
     "webhook:info": "tsx scripts/webhookInfo.mjs",
     "lint": "tsc -p tsconfig.json --noEmit",
-    "test": "node -e \"console.log('test: no automated tests yet')\""
+    "test": "node --test"
   },
   "dependencies": {
     "googleapis": "^156.0.0"
